# flask-users-projects

./: .gitignore  pyproject.toml
flask_users_projects/: __init__.py  db.py  projects.py
templates/: base.html
